# challenge_votacao

./: .env.example  .env.prod.example  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/scripts/: reencrypt_secrets.py
backend/alembic/versions/: 00841ea5f4f0_create_votos_table.py
backend/app/: _models.py  main.py
backend/app/core/: celery.py  database.py  logging.py  settings.py
backend/app/domains/votacao/: model.py  repository.py  router.py  schema.py  service.py
backend/tests/: conftest.py  test_health.py
backend/tests/domains/: test_votacao.py  test_votacao_router.py  test_votacao_unit.py
compose/dev/api/: Dockerfile  entrypoint.sh
compose/dev/frontend/: Dockerfile
compose/prod/api/: Dockerfile  entrypoint.sh
